metadata/objects/Book__c.object
<CustomObject>
    <fields>
        <fullName>ISBN__c</fullName>
        <label>ISBN</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsCheck__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsCheck</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>anumber2__c</fullName>
        <label>anumber2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>anumber3__c</fullName>
        <label>anumber3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>anumber4__c</fullName>
        <defaultValue>56.2</defaultValue>
        <label>anumber4</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bigtext__c</fullName>
        <label>bigtext</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>counter2__c</fullName>
        <displayFormat>BB-{00000}</displayFormat>
        <label>counter2</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>counter__c</fullName>
        <displayFormat>C-{00000}</displayFormat>
        <label>counter</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>floater__c</fullName>
        <label>floater</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mynewfield__c</fullName>
        <label>mynewfield</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>newfield__c</fullName>
        <defaultValue>&apos;something short&apos;</defaultValue>
        <description>This is a lazyfield.</description>
        <label>newfield</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>newtest__c</fullName>
        <label>newtest</label>
        <precision>10</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rich__c</fullName>
        <label>rich</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>someplace__c</fullName>
        <label>someplace</label>
        <scale>3</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>someplace_else__c</fullName>
        <label>someplace else</label>
        <scale>3</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>thedate__c</fullName>
        <label>thedate</label>
        <type>DateTime</type>
    </fields>
    <label>Book</label>
    <nameField>
        <displayFormat>B-{00000}</displayFormat>
        <label>Book Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Books</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>